tests/regression/error/hw5_error16.correct
too many arguments in call
